# image2rtsp

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml
config/: parameters.yaml
include/: image2rtsp.hpp  image_encodings.h  visibility_control.h
launch/: image2rtsp.launch.py  rtsp.launch.py
python/: rtsp.py
src/: image2rtsp.cpp  video.cpp
src/image2rtsp/: CMakeLists.txt  README.md  package.xml
src/image2rtsp/config/: parameters.yaml
src/image2rtsp/include/: image_encodings.h
src/image2rtsp/src/: video.cpp
